extension + user info fix for overflowing

--- a/src/app/extension/extension.component.css
+++ b/src/app/extension/extension.component.css
@@ -111,25 +111,33 @@ section{
     overflow: hidden;
 }
 .extension{
-    position: absolute;
     overflow: hidden;
-    right: 0%;
-    top: 40%;
-    height: 60%;
-    width:40%;
+    height: 50%;
+    width:100%;
     text-align: center;
     z-index: 3;
 }
 .extension-info-container{
-    text-align: center;
+    height: 100%;
+    width: 40%;
+    position: relative;
+    float: right;
+    z-index: 5;
 }
-.extension h1{
-    text-overflow: ellipsis; 
-    overflow: hidden; 
-    white-space: nowrap;
+.extension-name{
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    position: relative;
+    z-index: 5;
+}
+.extension-name h1{
+    position: absolute;
+    bottom: 0;
     font-size: 5.8em;
     font-weight: bold;
-    line-height: normal;
+    word-break: break-word;
+    width: 100%;
 }
 .extension h2{
     font-size: 1.5em;
