--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -202,58 +202,34 @@
     -o-animation: fadeOut 2.5s;
        animation: fadeOut 2.5s;
 }
-@-webkit-keyframes fadeIn {
-    0%   { opacity: 0; }
-    100% { opacity: 1; }
-  }
-  @-moz-keyframes fadeIn {
-    0%   { opacity: 0; }
-    100% { opacity: 1; }
-  }
-  @-o-keyframes fadeIn {
-    0%   { opacity: 0; }
-    100% { opacity: 1; }
-  }
-  @keyframes fadeIn {
-    0%   { opacity: 0; }
-    100% { opacity: 1; }
-  }
-  @-webkit-keyframes fadeOut {
-    0%   { opacity: 1; }
-    100% { opacity: 0; }
-  }
-  @-moz-keyframes fadeOut {
-    0%   { opacity: 1; }
-    100% { opacity: 0; }
-  }
-  @-o-keyframes fadeOut {
-    0%   { opacity: 1; }
-    100% { opacity: 0; }
-  }
-  @keyframes fadeOut {
-    0%   { opacity: 1; }
-    100% { opacity: 0; }
-  }
+.user-info-container{
+    height: 100%;
+    width: 40%;
+    position: relative;
+    float: right;
+    z-index: 5;
+}
 .profile{
-    position: absolute;
     overflow: hidden;
-    right: 0%;
-    top: 40%;
-    height: 60%;
-    width:40%;
+    height: 50%;
+    width:100%;
     text-align: center;
     z-index: 3;
 }
-.user-info-container{
+.username{
+    width: 100%;
+    height: 50%;
     text-align: center;
+    position: relative;
+    z-index: 5;
 }
-.profile h1{
-    text-overflow: ellipsis; 
-    overflow: hidden; 
-    white-space: nowrap;
+.username h1{
+    position: absolute;
+    bottom: 0;
     font-size: 5.8em;
     font-weight: bold;
-    line-height: normal;
+    word-break: break-word;
+    width: 100%;
 }
 .profile h2{
     font-size: 1.5em;
@@ -277,12 +253,10 @@
     text-decoration: underline;
 }
 .user-info{
-    text-align: center;
     padding-right: 25px;
     height: 25%;
 }
 .user-info p{
-    text-align: center;
     padding-right: 25px;
     width: 99%;
     height: 100%;
@@ -346,3 +320,35 @@
     padding-bottom: 5%;
     transition: 6s;
 }
+@-webkit-keyframes fadeIn {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @-moz-keyframes fadeIn {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @-o-keyframes fadeIn {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @keyframes fadeIn {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @-webkit-keyframes fadeOut {
+    0%   { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  @-moz-keyframes fadeOut {
+    0%   { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  @-o-keyframes fadeOut {
+    0%   { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  @keyframes fadeOut {
+    0%   { opacity: 1; }
+    100% { opacity: 0; }
+  }
